--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="carousel-item active vh-100 bg-brand" >
         <div class="container h-100 d-flex slide-1 align-items-center justify-content-center">
             <div class="row  ">
-                <div class="col-lg-8 ">
+                <div class="col-lg-8" id="hero-1">
                     <h1 class=" fw-bold display-3" >We make cloth that fit</h1>
                     <h6 class=" fw-light text-dark display-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h6>
                     <a href="#" class="btn btn-brand">Our services</a>
@@ -66,7 +66,7 @@
       <div class="carousel-item vh-100 bg-brand">
         <div class="container h-100 d-flex align-items-center justify-content-center slide-2 ">
           <div class="row">
-              <div class="col-lg-8">
+              <div class="col-lg-8" id="hero-1">
                   <h1 class=" fw-bold display-3" >We sell latest designs</h1>
                   <h6 class=" fw-light text-dark display-6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h6>
                   <a href="#" class="btn btn-brand">Our products</a>
@@ -186,7 +186,7 @@
           </ul>
         </div>
         <div class="col col-9 d-flex flex-wrap justify-content-between" data-aos="fade-up" data-aos-delay="300">
-          <div class="card m-2">
+          <div class="card m-2" id="card">
             <a href="#">
               <img src="./images/african 2.jpg" class="card-img-top" height="300" alt="african attire">
             </a>
@@ -312,7 +312,7 @@
                 <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius laboriosam id aut dignissimos nesciunt quas culpa ex tempore! Veniam deleniti similique officia perspiciatis laboriosam exercitationem!</p>
                 <div class="person mt-4 mt-4">
                   <img src="./images/avatar 1.jpg" alt="">
-                 <h4>Tund class="mb-0 mt-2"e Joe</h4>
+                 <h4>Tund Joe</h4>
                 </div>
               </div>
             </div>
